--- a/stylesheets/FBStyle.css
+++ b/stylesheets/FBStyle.css
@@ -1,17 +1,44 @@
 #loginlogout
 {
-	background-color: #f4f4f4;
+	background-color: pink;
 }
-#headercontainer
+#header
 {
  
 
 background-color: #387BD6;
-
+width:100%;
 position: relative;
 color: white;
-border: 1px #A9AEB5 solid;
-border-radius: 10px;
+border: 1px black solid;
 
-margin:0;
+
+
+
+
+
+}
+#container
+{
+	background-color: pink;
+	color:black;
+	border-left:1px black solid;
+	border-right:1px black solid;
+	border-bottom:1px black solid;
+	margin-top:0;
+	padding-top: 0;
+}
+body
+{
+	/*background-image:url(../img/fbback.jpg);*/
+	background-repeat:no-repeat;
+	background-size:cover;
+	background-color:white;
+}
+body,
+html
+{
+	min-height:100%;
+	margin:0;
+	padding:0;
 }
