--- a/stylesheets/FBStyle.css
+++ b/stylesheets/FBStyle.css
@@ -24,7 +24,7 @@ border: 1px black solid;
 }
 #container
 {
-	background-color: pink;
+	background-color: white;
 	color:black;
 	border-left:1px black solid;
 	border-right:1px black solid;
